Updated 'material/.overrides/home.html' via CloudCannon

--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -12,13 +12,13 @@
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="mdx-hero__content">
-          <h1>Technical documentation that just works</h1>
-          <p>{{ config.site_description }}. Set up in 5 minutes.</p>
+          <h1>Documentation pour le Conseil Départemental du Finistère</h1>
+          <p>{{ config.site_description }}</p>
           <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
-            Quick start
+            Projet en cours
           </a>
-          <a href="{{ 'insiders/' | url }}" title="Material for MkDocs Insiders" class="md-button">
-            Get Insiders
+          <a href="{{ 'https://teams.microsoft.com/l/chat/0/0?users=<romain.youssofi@rpa-solutions.io>' | url }}" title="Contact" class="md-button">
+            Contact
           </a>
         </div>
       </div>
