--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -6,12 +6,8 @@
   <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.9097afc2.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-  <a href="https://twitter.com/squidfunk">
-    For updates follow <strong>@squidfunk</strong> on
-    <span class="twemoji twitter">
-      {% include ".icons/fontawesome/brands/twitter.svg" %}
-    </span>
-    <strong>Twitter</strong>
+  <a href="https://teams.microsoft.com/l/chat/0/0?users=<romain.youssofi@rpa-solutions.io>">
+    Contact direct sur Teams
   </a>
 {% endblock %}
 {% block scripts %}
