Updated 'material/.overrides/main.html' via CloudCannon

--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block announce %}
   <a href="https://teams.microsoft.com/l/chat/0/0?users=<romain.youssofi@rpa-solutions.io>">
-    Contact direct sur Teams
+    Contact direct sur <strong>Microsoft Teams</strong>
   </a>
 {% endblock %}
 {% block scripts %}
